--- a/CustomerManagementApi/appsettings.json
+++ b/CustomerManagementApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "CustomerDb": "Data Source=customer.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
